# jan-commu

./: .gitignore  address_search.py  config.py  hello.py  main.py  pyproject.toml
static/: login.html  register copy.html  register.html  temp.html
templates/: home.html  index.html  index2.html  login.html  post.html  register.html
